[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rspy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ['description', 'license', 'readme', 'version']

[tool.maturin]
python-source = "python"
module-name = "rspy._rspy"
features = ["pyo3/extension-module"]
