[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rspy_utilities"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ['description', 'license', 'readme', 'version']

[tool.maturin]
python-source = "python"
module-name = "rspy_utilities._rspy_utilities"
features = ["pyo3/extension-module"]
